styling for where to stay section added and done some small changes in html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,9 +10,13 @@ header {
   display: flex;
   color: #484848;
   border-bottom: 1px solid #e4e4e4;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
+  background: #fff;
 }
 header h1 {
-  width: 2%;
+  width: 1.7%;
   padding: 24px;
 }
 header h1 a {
@@ -37,7 +41,7 @@ header .search label i {
 }
 header .search label input {
   width: 25%;
-  padding: 15px;
+  padding: 13px;
   font-size: 18px;
   padding-left: 40px;
   border: #ebebeb solid 1px;
@@ -53,7 +57,8 @@ header nav {
 }
 header nav ul li {
   display: inline-block;
-  padding: 32px 11px;
+  padding: 29px 13px;
+  margin-right: -4px;
 }
 header nav ul li:hover {
   border-bottom: 2px solid #767676;
@@ -64,12 +69,136 @@ header nav ul li a {
   color: #000;
 }
 
-.user_search {
-  border-bottom: 1px solid #e4e4e4;
+main {
+  position: relative;
 }
-.user_search .wrapper {
-  width: 91%;
-  margin: 0 auto;
+main .user_search {
+  width: 15%;
+  float: left;
+  position: fixed;
+  top: 13%;
+}
+main .user_search .search_info {
+  padding: 24px;
+}
+main .user_search .search_info p {
+  margin-top: 16px;
+  margin-bottom: 8px;
+  font-weight: 700;
+  color: #484848;
+}
+main .user_search .search_info button {
+  width: 100%;
+  padding: 10px;
+  background-color: #FFF;
+  border: 1px solid #dce0e0;
+  border-radius: 4px;
+  text-align: left;
+  font-size: 15px;
+  color: #767676;
+  transition: background-color 1s ease-in;
+}
+main .user_search .search_info button:hover {
+  background-color: #f2f2f2;
+  border-color: #f2f2f2;
+}
+main .explore {
+  width: 85%;
+  float: right;
+  margin-top: 80px;
+}
+main .explore .explore_paris {
+  padding: 50px;
+}
+main .explore .explore_paris h2 {
+  font-size: 25px;
+  font-weight: 700;
+  margin-bottom: 18px;
+  color: #484848;
+}
+main .explore .explore_paris .explore_info {
+  display: inline-block;
+  width: 32%;
+  border: 1px solid #dce0e0;
+  border-radius: 4px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px;
+  margin-right: 15px;
+}
+main .explore .explore_paris .explore_info a {
+  text-decoration: none;
+  color: #000;
+  font-weight: 700;
+}
+main .explore .explore_paris .explore_info a .home {
+  width: 100%;
+}
+main .explore .explore_paris .explore_info a img {
+  width: 96px;
+  height: 72px;
+}
+main .explore .explore_paris .explore_info a span {
+  margin-left: 15px;
+  color: #484848;
+}
+main .explore .paris_details {
+  padding: 50px;
+}
+main .explore .paris_details .where_to_stay .heading {
+  position: relative;
+}
+main .explore .paris_details .where_to_stay .heading h2 {
+  font-size: 25px;
+  font-weight: 700;
+  margin-bottom: 18px;
+  color: #484848;
+}
+main .explore .paris_details .where_to_stay .heading a {
+  position: absolute;
+  top: 30%;
+  left: 12%;
+  font-size: 18px;
+  color: #000;
+}
+main .explore .paris_details .where_to_stay .stay_info .stay_details {
+  width: 24%;
+  display: inline-block;
+  margin-right: 15px;
+  margin-bottom: 15px;
+}
+main .explore .paris_details .where_to_stay .stay_info .stay_details a {
+  display: inline-block;
+  text-decoration: none;
+  color: #000;
+}
+main .explore .paris_details .where_to_stay .stay_info .stay_details a img {
+  width: 100%;
+  height: 250px;
+  margin-bottom: 10px;
+}
+main .explore .paris_details .where_to_stay .stay_info .stay_details a span {
+  font-size: 13px;
+  font-weight: 600;
+}
+main .explore .paris_details .where_to_stay .stay_info .stay_details a span ~ span {
+  font-size: 15px;
+  display: block;
+  width: 100%;
+  font-weight: 400;
+}
+main .explore .paris_details .where_to_stay .stay_info .stay_details a .star {
+  display: block;
+  width: 100%;
+  font-size: 10px;
+}
+main .explore .paris_details .where_to_stay .stay_info .stay_details a .star i {
+  color: #008489;
+}
+main .explore .paris_details .where_to_stay .stay_info .stay_details a p {
+  font-weight: 700;
+  font-size: 17px;
+}
+main .explore .paris_details .where_to_stay .stay_info .stay_details:nth-child(4n) {
+  margin-right: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
