--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,6 +4,9 @@ $starColor: #008489;
 $borderTextColor : rgb(235, 235, 235);
 $buttonColor : rgb(242, 242, 242);
 $textButton : rgb(118, 118, 118);
+$borderRadius : 4px;
+$spanTextColor : #000;
+$width : 100%;
 
 @mixin  wrapper {
 	width: 91%;
@@ -26,7 +29,7 @@ body {
 }
 
 container {
-	width: 100%;
+	width: $width;
 }
 
 header {
@@ -34,7 +37,7 @@ header {
 	color : rgb(72, 72, 72);
 	border-bottom: 1px solid #e4e4e4;
 	position: fixed;
-	width: 100%;
+	width: $width;
 	z-index: 100;
 	background: #fff;
 	h1 {
@@ -43,7 +46,7 @@ header {
 		a {
 			display: inline-block;
 			img {
-				width: 100%;
+				width: $width;
 			}
 		}
 	}
@@ -64,7 +67,7 @@ header {
     		font-size: 18px;
     		padding-left: 40px;
     		border: $borderTextColor solid 1px;
-				border-radius: 4px;
+				border-radius: $borderRadius ;
 				box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px;
 				font-weight: 600;
 				&:active {
@@ -86,7 +89,7 @@ header {
 				a {
 					display: inline-block;
 					text-decoration: none;
-					color: #000;	
+					color: $spanTextColor;	
 				}
 			}
 		}
@@ -99,7 +102,7 @@ main {
 		width: 15%;
 		float: left;
 		position: fixed;
-		top: 13%;
+		top: 10%;
 		.search_info {
 			padding: 24px;
 			p {
@@ -109,11 +112,11 @@ main {
 				color: $textColor;
 			}
 			button {
-				width: 100%;
+				width: $width;
 				padding: 10px;
 				background-color: #FFF;
 				border: 1px solid rgb(220, 224, 224);
-				border-radius: 4px;
+				border-radius: $borderRadius ;
 				text-align: left;
 				font-size: 15px;
 				color: $textButton;
@@ -139,7 +142,7 @@ main {
 				display: inline-block;
 				width: 32%;
 				border: 1px solid rgb(220, 224, 224);
-				border-radius: 4px;
+				border-radius: $borderRadius ;
 				box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px;
 				margin-right: 15px;
 				a {
@@ -147,11 +150,12 @@ main {
 					color: #000;
 					font-weight: 700;
 					.home {
-						width: 100%;	
+						width: $width;	
 					}
 					img {
 						width: 96px;
 						height: 72px;
+						border-radius: $borderRadius ;
 					}
 					span {
 						margin-left: 15px;
@@ -185,9 +189,9 @@ main {
 						a {
 							display: inline-block;
 							text-decoration: none;
-							color: #000;
+							color: $spanTextColor;
 							img {
-								width: 100%;
+								width: $width;
 								height: 250px;
 								margin-bottom: 10px;
 							}
@@ -198,12 +202,12 @@ main {
 							span ~ span {
 								font-size: 15px;
 								display: block;
-								width: 100%;
+								width: $width;
 								font-weight: 400;
 								 }
 								.star {
 									display: block;
-									width: 100%;
+									width: $width;
 									font-size: 10px;
 									i {
 										color : #008489;
@@ -219,6 +223,17 @@ main {
 						}
 					}
 				}
+			}
+			.show_all {
+				a {
+				color : #008489;
+				font-weight: 600;
+				font-size: 17px;
+				text-decoration: none;
+				&:hover {
+					text-decoration: underline;
+				}				
+			}
 			}
 		}
 	}
